# RAG-Data-Ingestion-Pipeline

./: .gitignore  README.md  pyproject.toml
notebook/: document.ipynb
